--- a/DDframework/src/test/resources/properties/log4j.properties
+++ b/DDframework/src/test/resources/properties/log4j.properties
@@ -1,30 +1,24 @@
-
+#Selenium Logs
+log4j.rootLogger=DEBUG, file
+log4j.appender.file=org.apache.log4j.RollingFileAppender
+log4j.appender.file.File=C:\\Users\\SMR\\Workspace\\DDframework\\src\\test\\resources\\logs\\Selenium.log
+log4j.appender.file.maxFileSize=5000KB
+log4j.appender.file.maxBackupIndex=1
+log4j.appender.file.layout=org.apache.log4j.PatternLayout
+log4j.appender.file.layout.ConversionPattern=%d{ABSOLUTE} %5p %c{1}:%L - %m%n
+#do not append the old file. Create a new log file every time
+log4j.appender.file.Append=false
 
 
 #Application Logs
-#log4j.logger.devpinoyLogger=DEBUG, ERROR, dest2
-#log4j.appender.dest2=org.apache.log4j.RollingFileAppender
-#log4j.appender.dest2.maxFileSize=5000KB
-#log4j.appender.dest2.maxBackupIndex=3
-#log4j.appender.dest2.layout=org.apache.log4j.PatternLayout
-#log4j.appender.dest2.layout.ConversionPattern=%d{ABSOLUTE} %5p %c{1}:%L - %m%n
-#log4j.appender.dest2.File=C:\\Users\\SMR\\Workspace\\DDframework\\src\\test\\resources\\logs\\Application.log
-#do not append the old file. Create a new log file everytime
-#log4j.appender.dest2.Append=false
+log4j.logger.devpinoyLogger=DEBUG, ERROR, dest2
+log4j.appender.dest2=org.apache.log4j.RollingFileAppender
+log4j.appender.dest2.maxFileSize=5000KB
+log4j.appender.dest2.maxBackupIndex=3
+log4j.appender.dest2.layout=org.apache.log4j.PatternLayout
+log4j.appender.dest2.layout.ConversionPattern=%d{ABSOLUTE} %5p %c{1}:%L - %m%n
+log4j.appender.dest2.File=C:\\Users\\SMR\\Workspace\\DDframework\\src\\test\\resources\\logs\\Application.log
+do not append the old file. Create a new log file everytime
+log4j.appender.dest2.Append=false
 
-#=============================================================  log = /usr/home/log4j
-log = D:\\logs
-#log4j.rootLogger=DEBUG, file
-log4j.logger.devpinoyLogger=DEBUG, ERROR, file
-
-# Define the file appender
-log4j.appender.file=org.apache.log4j.RollingFileAppender
-log4j.appender.file.File=${log}/logfile.log
-
-# Define the layout for file appender
-log4j.appender.file.layout=org.apache.log4j.PatternLayout
-log4j.appender.file.layout.conversionPattern=%m%n
-log4j.appender.file.Append=false
-
-#C:\Users\SMR\.m2\repository\log4j\log4j\1.2.14\log4j-1.2.14.jar
 
